syntax = "proto3";
option go_package = "proto/"; 
package proto;

message Empty{
}

service LogQuery{
    rpc Grep(GrepRequest) returns (GrepResponse){}
    rpc SearchLogs(LogRequest) returns (stream LogResponse){}
    rpc RestartFileserver(Empty) returns (RestartResponse){}
}
message RestartResponse{
    int32  status = 1;
}
message GrepResponse{
    int32  Line = 1;
    string Result = 2;
}
message GrepRequest{
    repeated string Params = 1;
}
message LogRequest{
    repeated string Params = 1;
}
message LogResponse{
    string Time = 1;
    int32  Line = 2;
    string Result = 3;
    string Host = 4;
}

service File{
    // Debug Function
    rpc NodeLeave(Empty) returns (LeaveResponse){}
    rpc ClusterStatus(Empty) returns (MachinesStatus){}
    rpc GetLeader(Empty) returns (LeaderInfo){}
    rpc GetGlobalFiles(Empty) returns(stream SDFSFileInfo){}
    rpc GetLocalFiles(Empty) returns(stream MetaData){}
    
    // election
    // trigger election
    rpc TriggerElection(StatusMsg) returns (Empty){} 
    rpc SyncMetadata(stream LocalfileMetaData) returns (LeaderInfo){}
    rpc SyncComplete(LeaderInfo) returns (Empty){}
    
    // File System
    // Main Function
    // Register sdfsfilename and get Incarnation number and Writing Destination
    rpc RegisterFile(MetaData) returns(SDFSFileInfo){}
    // Get FileInfo from Leader, Including Acked[] and Incarnation
    rpc GetFileInfo(MetaData) returns(SDFSFileInfo){}
    // Get File MetaData from Followers, Check whether the Latest
    rpc GetFileMetaData(MetaData) returns(MetaData){}
    // Get File Data from Followers
    rpc GetFile(MetaData) returns(stream FileData){}
    // Write File into Server 
    rpc WriteFile(stream FileData) returns(stream StatusMsg){} 
    //
    rpc DeleteFile(MetaData) returns(Empty){} 

    // Sub Function
    rpc UpdateGlobalFiles(LocalfileMetaData) returns(Empty){}
    rpc AssignRepication(SDFSFileInfo) returns(Empty){}
    rpc DeleteLocalFile(MetaData) returns(Empty){} 
}
message LeaveResponse{
    int32 Status = 1;
}
message LeaderInfo{
    int32 Number = 1;
    int32 Status = 2;
}
message MachineStatus{
    int32 Host = 1;
    int32 Incarnation = 2;
    string Status = 3;
}
message MachinesStatus{
    repeated MachineStatus MsStatus = 1;
    int32 Leader = 2;
    int32 LeaderStatus = 3;
}

message StatusMsg{
    int32 Status = 1;
}
message MetaData{
    int32 Incarnation = 1;
    int32 Status = 2;
    string Filename = 3;
    
}
message SDFSFileInfo{
    MetaData FMeta = 1;
    repeated int32 Acked = 3;
    repeated int32 Writing = 2;
    // repeated int32 Assigned = 4;
}
message FileData{
    bytes Data = 1;
    MetaData Meta = 2;
    int32 Status = 3;
}
message LocalfileMetaData{
    MetaData FMeta = 1;
    int32 Host = 2;
}